prevent SEE MORE in breakersection from breaking across 2 lines on mobile

--- a/src/stylesheets/partials/_breakersection.scss
+++ b/src/stylesheets/partials/_breakersection.scss
@@ -56,6 +56,7 @@
     }
     .popup {
         margin-left: 50px;
+        display: inline-block;
     }
     .btn {
         font-weight: 500;
